docs/v4.0.2/_sources/gallery/experiment/sphere/sphere_a1_vs_diameter.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/experiment/sphere/sphere_a1_vs_diameter.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_experiment_sphere_sphere_a1_vs_diameter.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_experiment_sphere_sphere_a1_vs_diameter.py:


Sphere: A1 scattering coefficient
===================================

.. GENERATED FROM PYTHON SOURCE LINES 8-9

Importing the package dependencies: numpy, PyMieSim

.. GENERATED FROM PYTHON SOURCE LINES 9-38

.. code-block:: Python

    import numpy as np
    from PyMieSim.units import ureg

    from PyMieSim.experiment.scatterer import SphereSet
    from PyMieSim.experiment.source import GaussianSet, PolarizationSet
    from PyMieSim.experiment import Setup

    polarization_set = PolarizationSet(
        angles=[0.0] * ureg.degree,
    )

    source = GaussianSet(
        wavelength=[400] * ureg.nanometer,
        polarization=polarization_set,
        optical_power=[1e-6] * ureg.watt,
        numerical_aperture=[0.2] * ureg.AU,
    )
    scatterer = SphereSet(
        diameter=np.linspace(300, 1000, 100) * ureg.nanometer,
        refractive_index=[1.2, 1.25] * ureg.RIU,
        medium_refractive_index=[1.0] * ureg.RIU,
        source=source,
    )

    experiment = Setup(scatterer=scatterer, source=source)

    dataframe = experiment.get("a1")

    dataframe.plot(x="scatterer:diameter", std="scatterer:refractive_index")



.. image-sg:: /gallery/experiment/sphere/images/sphx_glr_sphere_a1_vs_diameter_001.png
   :alt: sphere a1 vs diameter
   :srcset: /gallery/experiment/sphere/images/sphx_glr_sphere_a1_vs_diameter_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /opt/hostedtoolcache/Python/3.11.14/x64/lib/python3.11/site-packages/pandas/core/groupby/ops.py:231: ComplexWarning: Casting complex values to real discards the imaginary part
      values = ensure_float64(values)

    <Figure size 800x500 with 1 Axes>




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.176 seconds)


.. _sphx_glr_download_gallery_experiment_sphere_sphere_a1_vs_diameter.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: sphere_a1_vs_diameter.ipynb <sphere_a1_vs_diameter.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: sphere_a1_vs_diameter.py <sphere_a1_vs_diameter.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: sphere_a1_vs_diameter.zip <sphere_a1_vs_diameter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
